pypet 0.1b.9

*   BUG FIX: Fixed backwards compatibility

*   BUG FIX: Metadata is loaded only once


pypet 0.1b.8

*   Support for python 3.3 and 3.4!

*   Proper handling of unicode strings (well, see above^^)

*   Checking if names of leaf and group nodes only contain alphanumeric characters

*   PickleParameter and PickleResult now explicitly store the pickle protocol
    because retrieval from the pickle dump is not always possible in python 3.

*   Children of groups are no longer listed via __dir__ in case of debugging to
    prevent unwanted locking.

*   Better support for PyTables 2 and 3 with same code base.

*   pypet and pypet.brian now provide the __all__ list.


pypet 0.1b.7

*   StreamToLogger has moved to the pypetlogging.py module. The mplogging module was
    deleted.

*   The Network Manager now accepts custom network constructors

*   A SingleRun can now provide a `v_filename` and `v_as_run` property.
    Both cannot be changed and the latter simply returns the name of the run.

*   Better testing on travis

*   Better support for pandas 0.14.1

*   Now you can import most of the objects directly from the *pypet* package, e.g.
    ``from pypet import Trajectory`` instead of ``from pypet.trajectory import Trajectory``.


pypet 0.1b.6

*   The storage service prints status updates for loading and storing trees

*   v_as_run is not longer `None` for a trajectory but `run_ALL`

*   The Queue storage writer now stores batches of single runs to avoid
    re-opening of files as much as possible

*   Faster Loading of data

*   Support for PyTables 3.1.1

*   *pypet* stores the name of the main script as a config parameter

*   Data of Parameters can be accessed via `.data` or `param['data']`.
    Same holds for results that only contain a single data item.

*   Parameters provide the function `f_get_default` to return the default value
    if the parameter is not empty.

*   Large dictionaries and Object Tables are now split into chunks of 512 items
